--- a/src/sass/theme.scss
+++ b/src/sass/theme.scss
@@ -1,5 +1,5 @@
 // Font import
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 // Tailwind base
 @tailwind base;
@@ -9,7 +9,7 @@
 // Set default font
 @layer base {
     html {
-        font-family: 'Fira Sans', sans-serif;
+        font-family: "Fira Sans", sans-serif;
     }
     body {
         @apply bg-white;
@@ -20,10 +20,43 @@
     }
 }
 
-@import './sub/btn';
-@import './sub/swiper-pagination';
-@import './sub/history-slider';
+@import "./sub/btn";
+@import "./sub/swiper-pagination";
+@import "./sub/history-slider";
 
 body {
     min-height: 8000px;
+}
+
+.decor {
+    transform: translateY(50px);
+    opacity: 0;
+    &:not(.faded-out) {
+        animation-name: appear;
+        animation-duration: 800ms;
+        animation-fill-mode: forwards;
+        animation-timing-function: ease-in-out;
+    }
+    @for $i from 2 through 6 {
+        &:nth-child(#{$i}) {
+            $delay: #{120 * ($i - 1)}ms;
+            animation-delay: $delay;
+        }
+    }
+}
+
+.faded-out {
+    transform: translateY(50px);
+    opacity: 0;
+}
+
+@keyframes appear {
+    0% {
+        transform: translateY(50px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
 }
