--- a/src/sass/theme.scss
+++ b/src/sass/theme.scss
@@ -23,6 +23,7 @@
 @import "./sub/btn";
 @import "./sub/swiper-pagination";
 @import "./sub/history-slider";
+@import "./sub/header";
 
 body {
     min-height: 8000px;
