--- a/src/sass/theme.scss
+++ b/src/sass/theme.scss
@@ -24,10 +24,7 @@
 @import "./sub/swiper-pagination";
 @import "./sub/history-slider";
 @import "./sub/header";
-
-body {
-    min-height: 8000px;
-}
+@import "./sub/footer";
 
 .decor {
     transform: translateY(50px);
