added contact page

--- a/src/sass/theme.scss
+++ b/src/sass/theme.scss
@@ -25,6 +25,7 @@
 @import "./sub/history-slider";
 @import "./sub/header";
 @import "./sub/footer";
+@import "./sub/contact-form";
 
 .decor {
     transform: translateY(50px);
