--- a/src/sass/sub/_history-slider.scss
+++ b/src/sass/sub/_history-slider.scss
@@ -2,36 +2,47 @@
     // padding-bottom: 16rem;
     .history-pagination.swiper-pagination {
         position: relative;
-        @apply md:pt-40;
-        
+        align-items: center;
+        min-height: 170px;
+        @apply mt-40;
+        -webkit-overflow-scrolling: touch;
+        // flex-wrap: wrap;
+        @apply max-xs:overflow-auto;
+
         .swiper-pagination-bullet {
-            width: auto;
+            flex-shrink: 0;
+            width: max-content;
             height: auto;
             background-color: transparent;
-            aspect-ratio: 1;
-            transition: transform 300ms;
-            &-active {
-                transform: scale(1.3);
+            &-active .history-pagination-el{
+                transform: rotateZ(180deg) scale(1.3);
             }
+            
+        }
+        .swiper-slide {
+            height: unset;
         }
         .history-pagination-el {
             display: block;
             position: relative;
-            transform: rotate(-90deg);
+            writing-mode: vertical-lr;
             width: auto;
             height: min-height;
             font-size: 30px;
-            padding-left: 40px;
+            padding-top: 36px;
             transform-origin: center;
+            transform: rotateZ(180deg);
+            transition: transform 300ms;
             
 
             &::before {
                 content: "";
                 position: absolute;
-                top: 50%;
-                left: 0;
-                width: 30px;
-                height: 1px;
+                top: 0;
+                left: 50%;
+                width: 1px;
+                margin-bottom: 5px;
+                height: 30px;
                 background-color: #000;
             }
         }
