--- a/src/sass/sub/_footer.scss
+++ b/src/sass/sub/_footer.scss
@@ -1,8 +1,8 @@
 .newsletter-form {
-    @apply w-full max-w-[400px] flex flex-col items-center mx-auto;
+    @apply w-full mx-auto;
 
     &__input {
-        @apply bg-white placeholder:text-black leading-[3.875rem] px-4 mb-4 w-full;
+        @apply bg-white placeholder:text-black leading-[3.875rem] px-4 w-full border border-solid border-black;
     }
     &__info {
         @apply text-sm leading-[1.125rem] mb-5;
@@ -61,12 +61,11 @@
         hover:text-primary
         focus:text-primary;
     }
-    &__policy {
-        @apply text-[11px] leading-[1.125rem] text-center;
-
-        a {
-            @apply font-bold underline hover:text-primary focus:text-primary transition-colors;
-        }
+    &__info {
+        @apply text-[11px] leading-[1.125rem]  font-extralight w-full;
+    }
+    .wpcf7-spinner {
+        display: none;
     }
 }
 .wpcf7-list-item {
