--- a/src/sass/sub/_history-slider.scss
+++ b/src/sass/sub/_history-slider.scss
@@ -1,10 +1,13 @@
 .history-slider.swiper {
     // padding-bottom: 16rem;
+    .swiper-slide {
+        height: unset;
+    }
     .history-pagination.swiper-pagination {
         position: relative;
         align-items: center;
         min-height: 170px;
-        @apply mt-40;
+        margin-top: 80px;
         -webkit-overflow-scrolling: touch;
         // flex-wrap: wrap;
         @apply max-xs:overflow-auto;
@@ -14,14 +17,11 @@
             width: max-content;
             height: auto;
             background-color: transparent;
-            &-active .history-pagination-el{
+            &-active .history-pagination-el {
                 transform: rotateZ(180deg) scale(1.3);
             }
-            
         }
-        .swiper-slide {
-            height: unset;
-        }
+
         .history-pagination-el {
             display: block;
             position: relative;
@@ -33,7 +33,6 @@
             transform-origin: center;
             transform: rotateZ(180deg);
             transition: transform 300ms;
-            
 
             &::before {
                 content: "";
