--- a/src/sass/sub/_swiper-pagination.scss
+++ b/src/sass/sub/_swiper-pagination.scss
@@ -8,6 +8,11 @@
         background-color: #fff;
       }
     }
+
+
+    .swiper-button-prev, .swiper-button-next {
+      color: #fff;
+    }
 }
 
 
