--- a/src/sass/sub/_news.scss
+++ b/src/sass/sub/_news.scss
@@ -1,6 +1,9 @@
 .blog {
+    position: relative;
     max-width: 1536px;
     $ratio: calc(10 / 16);
+
+    
     .blog__card {
         display: grid;
         padding-bottom: $ratio * 3rem;
@@ -9,6 +12,8 @@
         border-left: 1px solid $primary-color;
         border-right: 1px solid $primary-color;
         transition: transform 300ms ease-in-out;
+        // transform-style: preserve-3d;
+
         &-top {
             display: grid;
             align-items: end;
@@ -38,10 +43,13 @@
                 left: 0;
                 width: 100%;
                 height: 100%;
+                // background-size: 103%;
+                // background-position: bottom;
                 background-image: linear-gradient(
                     rgba($color: #fff, $alpha: 0.1) 0%,
                     rgba($color: #fff, $alpha: 0.5) 30%,
-                    rgba($color: #fff, $alpha: 0.95) 100%
+                    rgba($color: #fff, $alpha: 0.99) 95%
+                    rgba($color: #fff, $alpha: 1) 100%
                 );
                 z-index: 1;
             }
@@ -57,6 +65,7 @@
                 @include scale-fontsize($fontsize: 2.375rem, $scale: 0.2);
                 text-transform: uppercase;
                 font-weight: 500;
+                line-height: 1;
                 strong {
                     @include scale-fontsize($fontsize: 1.875rem, $scale: 0.2);
                 }
@@ -100,7 +109,7 @@
 
         &:hover,
         &:focus-within {
-            transform: scale(1.01);
+            transform: scale(101%);
             z-index: 2;
         }
     }
