--- a/src/sass/sub/_map.scss
+++ b/src/sass/sub/_map.scss
@@ -119,7 +119,10 @@
             display: flex;
             flex-wrap: wrap;
             padding-top: 20px;
-            // margin-inline:;
+            padding-left: 20px;
+            padding-right: 20px;
+            margin-left: -20px;
+            margin-right: -20px;
             background-color: #fff;
             border: none;
             transform: translateX(-100%);
@@ -176,7 +179,7 @@
         .map__search-results-heading {
             position: absolute;
             bottom: 100%;
-            @include scale-fontsize($fontsize: 2rem);
+            @include scale-fontsize($fontsize: 1.6rem);
             font-weight: 200;
             z-index: -1;
 
@@ -185,8 +188,6 @@
             }
         }
         .map__search-shops {
-            margin-left: -20px;
-            padding-left: 20px;
             background-color: #fbfaf9;
             max-height: calc(700px - 250px - 1.875rem);
             overflow-y: auto;
@@ -198,15 +199,15 @@
             padding-block: 2rem;
 
             &-icon {
-                width: 1.875rem;
+                width: 1.4rem;
                 height: auto;
                 object-fit: contain;
             }
             &-info {
-                padding-left: 20px;
+                padding-left: 12px;
             }
             &-name {
-                @include scale-fontsize($fontsize: 2rem);
+                @include scale-fontsize($fontsize: 1.2rem);
                 text-transform: uppercase;
                 font-weight: 600;
                 line-height: 1.2;
@@ -218,7 +219,7 @@
             &-text,
             &-text a,
             &-text p {
-                @include scale-fontsize($fontsize: 1rem);
+                font-size: 0.9rem;
                 font-weight: 200;
                 line-height: 1.2;
             }
@@ -294,10 +295,10 @@
             position: absolute;
             top: 0;
             left: 0;
-            width: 100vw;
+            width: 100dvw;
+            height: 100%;
             z-index: 1000;
             background-color: #fff;
-            padding-inline: 20px;
             transform: translateX(-100%);
             transition: transform 300ms ease;
 
@@ -324,8 +325,6 @@
                 overflow: unset;
                 overflow-x: auto;
                 scroll-snap-type: x mandatory;
-                margin-left: -20px;
-                margin-right: -20px;
             }
             .map__search-shop {
                 width: 50vw;
